--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Segoe UI';
 }
+
 header {
     position: absolute;
     top: 0;
@@ -15,11 +16,13 @@ header {
     justify-content: space-between;
     align-items: center;
 }
-header .logo {
+
+header .nombre {
     color: #ffffff;
     text-transform: uppercase;
     cursor: pointer;
 }
+
 .container {
     background: transparent;
     display: flex;
@@ -27,11 +30,16 @@ header .logo {
     justify-content: center;
 }
 
+ul li a {
+    color: hsl(0, 0%, 100%);
+    text-decoration: none;
+}
+
 nav ul li {
     list-style: none;
     display: inline-grid;
     padding: 15px 35px;
-    margin: 10px;
+    margin: 5x;
     font-size: 18px;
     font-weight: 500;
     color: #ffffff;
@@ -40,9 +48,10 @@ nav ul li {
     z-index: 2;
     transition: color 0.4s;
 }
+
 nav ul li::after {
     content: '';
-    background: #ffffff;
+    background: #3b4046;
     width: 100%;
     height: 100%;
     border-radius: 30px;
@@ -55,13 +64,14 @@ nav ul li::after {
 }
 
 nav ul li:hover {
-color: #069be0;
+    color: #069be0;
 }
 
 nav ul li:hover::after {
     top: 50%;
     opacity: 1;
 }
+
 .showcase {
     position: absolute;
     right: 0;
@@ -89,6 +99,7 @@ nav ul li:hover::after {
     object-fit: cover;
     opacity: 0.9;
 }
+
 .overlay {
     position: absolute;
     top: 0;
@@ -154,6 +165,7 @@ nav ul li:hover::after {
     justify-content: center;
     align-items: center;
 }
+
 .social li {
     list-style: none;
 }
@@ -199,7 +211,72 @@ nav ul li:hover::after {
     color: #03a9f4;
 }
 
+.container-all {
+    width: 100%;
+    max-width: 1000px;
+    margin: auto;
+    padding: 60px;
+    background: white;
+    margin-top: 10%;
+    border-top: 6px solid #e6af5c;
+}
+
+.container-all n {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-all hr {
+    width: 100%;
+}
+
+.title {
+    font-size: 40px;
+    margin-bottom: 60px;
+    text-align: center;
+}
+
+.sub-tittle {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.container-all p {
+    font-size: 18px;
+    font-weight: 300;
+    margin-top: 5%;
+}
+
+.mg1 {
+    width: 400px;
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    width: 30%;
+    border: 2px solid #ffffff;
+    border-radius: 8px;
+}
+
+.mg2 {
+    width: 30%;
+    float: right;
+    margin-top: 2%;
+    margin-right: 10%;
+    border: 2px solid #ffffff;
+    border-radius: 8px;
+}
+.mg3 {
+    width: 50%;
+    margin: 0 auto; 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    border: 2px solid #ffffff;
+    border-radius: 10px;
+}
 @media (max-width: 991px) {
+
     .showcase,
     .showcase header {
         padding: 40px;
@@ -215,6 +292,7 @@ nav ul li:hover::after {
 }
 
 @media (max-width: 767px) {
+
     .showcase,
     .showcase header {
         padding: 20px;
@@ -230,6 +308,7 @@ nav ul li:hover::after {
 }
 
 @media (max-width: 479px) {
+
     .showcase,
     .showcase header {
         padding: 10px;
